set(CMAKE_CXX_FLAGS "-std=c++11 -Wall -Wno-unused-local-typedefs -g")
file(GLOB MARKDOWN *.md)
file(GLOB SRC *.cpp *.hpp)
find_package( Boost REQUIRED COMPONENTS program_options )
include_directories( ${Boost_INCLUDE_DIRS} )
add_executable(Test001 ${SRC} ${MARKDOWN})
target_link_libraries( Test001 ${Boost_PROGRAM_OPTIONS_LIBRARY} )